Finished user registration

--- a/views/login/index.pug
+++ b/views/login/index.pug
@@ -4,3 +4,5 @@ block content
         include logo
         .login-box-body
             include loginform
+            // /.social-auth-links
+            a(href='#') I forgot my password
