--- a/views/login/layout.pug
+++ b/views/login/layout.pug
@@ -15,7 +15,7 @@ html
     // Theme style
     link(rel='stylesheet', href='/styles/AdminLTE.min.css')
     // iCheck
-    link(rel='stylesheet', href='/plugins/iCheck/square/blue.css')
+    link(rel='stylesheet', href='/plugins/iCheck/square/red.css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
@@ -34,8 +34,8 @@ html
     script.
       $(function () {
       $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      //radioClass: 'iradio_square-blue',
+      checkboxClass: 'icheckbox_square-red',
+      //radioClass: 'iradio_square-red',
       increaseArea: '20%' // optional
       });
       });
