Finally got authentication working

--- a/views/dashboard/logo.pug
+++ b/views/dashboard/logo.pug
@@ -1,9 +1,9 @@
 a.logo(href='#')
   // mini logo for sidebar mini 50x50 pixels
   span.logo-mini
-    b A
-    | LT
+    b #{logofirst}
+    | #{logosecondmin}
   // logo for regular state and mobile devices
   span.logo-lg
-    b Admin
-    | LTE
+    b #{logofirst}
+    | #{logosecond}
