--- a/views/login/layout.pug
+++ b/views/login/layout.pug
@@ -31,6 +31,7 @@ html
     script(src='/libs/bootstrap/dist/js/bootstrap.min.js')
     // iCheck
     script(src='/plugins/iCheck/icheck.min.js')
+    script(src='/plugins/bootstrap-validator/dist/validator.min.js')
     script.
       $(function () {
       $('input').iCheck({
