--- a/views/dashboard/navbar.pug
+++ b/views/dashboard/navbar.pug
@@ -157,13 +157,13 @@ nav.navbar.navbar-static-top
       li.dropdown.user.user-menu
         a.dropdown-toggle(href='#', data-toggle='dropdown')
           img.user-image(src='dist/img/user2-160x160.jpg', alt='User Image')
-          span.hidden-xs Rashed Doha
+          span.hidden-xs #{user.full_name}
         ul.dropdown-menu
           // User image
           li.user-header
             img.img-circle(src='dist/img/user2-160x160.jpg', alt='User Image')
             p
-              | Rashed Doha - Web Developer
+              | #{user.full_name} - #{user.region}
               small Member since Nov. 2012
           // Menu Body
           li.user-body
