--- a/views/dashboard/sidebar.pug
+++ b/views/dashboard/sidebar.pug
@@ -4,7 +4,7 @@ section.sidebar
     .pull-left.image
       img.img-circle(src='dist/img/user2-160x160.jpg', alt='User Image')
     .pull-left.info
-      p Alexander Pierce
+      p=username
       a(href='#')
         i.fa.fa-circle.text-success
         |  Online
