--- a/views/backend/dashboard/content-header.pug
+++ b/views/backend/dashboard/content-header.pug
@@ -2,7 +2,7 @@
 section.content-header
   h1
     | Dashboard
-    small Control panel
+    small #{user.region}
   ol.breadcrumb
     li
       a(href='#')
