--- a/views/backend/layout.pug
+++ b/views/backend/layout.pug
@@ -7,27 +7,27 @@ html
     // Tell the browser to be responsive to screen width
     meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
     // Bootstrap 3.3.7
-    link(rel='stylesheet', href='libs/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/libs/bootstrap/dist/css/bootstrap.min.css')
     // Font Awesome
-    link(rel='stylesheet', href='styles/font-awesome/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/styles/font-awesome/css/font-awesome.min.css')
     // Ionicons
-    link(rel='stylesheet', href='styles/Ionicons/css/ionicons.min.css')
+    link(rel='stylesheet', href='/styles/Ionicons/css/ionicons.min.css')
     // Theme style
-    link(rel='stylesheet', href='styles/AdminLTE.min.css')
+    link(rel='stylesheet', href='/styles/AdminLTE.min.css')
     //
       AdminLTE Skins. Choose a skin from the css/skins
       folder instead of downloading all of them to reduce the load.
-    link(rel='stylesheet', href='styles/skins/_all-skins.min.css')
+    link(rel='stylesheet', href='/styles/skins/_all-skins.min.css')
     // Morris chart
-    link(rel='stylesheet', href='libs/morris.js/morris.css')
+    link(rel='stylesheet', href='/libs/morris.js/morris.css')
     // jvectormap
-    link(rel='stylesheet', href='libs/jvectormap/jquery-jvectormap.css')
+    link(rel='stylesheet', href='/libs/jvectormap/jquery-jvectormap.css')
     // Date Picker
-    link(rel='stylesheet', href='libs/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css')
+    link(rel='stylesheet', href='/libs/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css')
     // Daterange picker
-    link(rel='stylesheet', href='libs/bootstrap-daterangepicker/daterangepicker.css')
+    link(rel='stylesheet', href='/libs/bootstrap-daterangepicker/daterangepicker.css')
     // bootstrap wysihtml5 - text editor
-    link(rel='stylesheet', href='plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css')
+    link(rel='stylesheet', href='/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
@@ -35,6 +35,7 @@ html
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     // Google Font
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic')
+    block styles
     body.hold-transition.skin-red.sidebar-mini
         .wrapper
             header.main-header
@@ -42,9 +43,7 @@ html
                 include navbar
             aside.main-sidebar
                 include sidebar
-            .content-wrapper
-                include content-header
-                include content
+            block content
             include footer
             include control-sidebar
             .control-sidebar-bg
