--- a/views/backend/navbar.pug
+++ b/views/backend/navbar.pug
@@ -18,7 +18,7 @@ nav.navbar.navbar-static-top
                 // start message
                 a(href='#')
                   .pull-left
-                    img.img-circle(src='dist/img/user2-160x160.jpg', alt='User Image')
+                    img.img-circle(src='https://www.atomix.com.au/media/2015/06/atomix_user31.png', alt='User Image')
                   h4
                     | Support Team
                     small
@@ -156,12 +156,12 @@ nav.navbar.navbar-static-top
       // User Account: style can be found in dropdown.less
       li.dropdown.user.user-menu
         a.dropdown-toggle(href='#', data-toggle='dropdown')
-          img.user-image(src='dist/img/user2-160x160.jpg', alt='User Image')
+          img.user-image(src='https://www.atomix.com.au/media/2015/06/atomix_user31.png', alt='User Image')
           span.hidden-xs #{user.full_name}
         ul.dropdown-menu
           // User image
           li.user-header
-            img.img-circle(src='dist/img/user2-160x160.jpg', alt='User Image')
+            img.img-circle(src='https://www.atomix.com.au/media/2015/06/atomix_user31.png', alt='User Image')
             p
               | #{user.full_name} - #{user.region}
               small Member since Nov. 2012
