--- a/views/backend/sidebar.pug
+++ b/views/backend/sidebar.pug
@@ -2,7 +2,7 @@ section.sidebar
   // Sidebar user panel
   .user-panel
     .pull-left.image
-      img.img-circle(src='dist/img/user2-160x160.jpg', alt='User Image')
+      img.img-circle(src='https://www.atomix.com.au/media/2015/06/atomix_user31.png', alt='User Image')
     .pull-left.info
       p=user.full_name
       a(href='#')
